@startuml

AbstractShootStrategy <|.. BossSpread
AbstractShootStrategy <|.. EliteStraight
AbstractShootStrategy <|.. HeroSpread
AbstractShootStrategy <|.. HeroStraight


HeroAircraft o..> HeroSpread
HeroAircraft o..> HeroStraight
EliteEnemy o..> EliteStraight
BossEnemy o..> BossSpread

class HeroAircraft{}
class EliteEnemy{}
class BossEnemy{}

interface AbstractShootStrategy{
    + {abstract}executeStrategy(int x, int y, int speedX, int speedY):List<BaseBullet>
}

class BossSpread{
    + executeStrategy(int x, int y, int speedX, int speedY):List<BaseBullet>
}
class EliteStraight{
    + executeStrategy(int x, int y, int speedX, int speedY):List<BaseBullet>
}

class HeroSpread{
    + executeStrategy(int x, int y, int speedX, int speedY):List<BaseBullet>
}

class HeroStraight{
    + executeStrategy(int x, int y, int speedX, int speedY):List<BaseBullet>
}


@enduml